# CasaReal_IBM

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  certificate.crt  entrypoint.sh  env.changing.example  env.example  env.secret.example  pyproject.toml
backend_database_query/: __init__.py  env.py
backend_database_query/api/: cos_routes.py  db_routes.py  elastic_routes.py  httpAuth_routes.py  s3_routes.py  verify_routes.py  watsonx_routes.py  websocket_routes.py
backend_database_query/business_logic/: clients_initialitation.py  nl_to_sql.py
backend_database_query/connectors/: CosClient.py  DbManager.py  ElasticSearch.py  EmbeddingsClient.py  HttpBasicAuth.py  MilvusClient.py  S3Client.py  Singleton.py  VerifyDecorator.py  WDClient.py  WatsonxClient.py  WebSocketManager.py
backend_database_query/models/: BaseModel.py  LastFilesModel.py
fastapi_template/: Logger.py  __init__.py  env.py
fastapi_template/api/: cos_routes.py  db_routes.py  elastic_routes.py  httpAuth_routes.py  nl_to_sql_routes.py  s3_routes.py  verify_routes.py  watsonx_routes.py  websocket_routes.py
fastapi_template/business_logic/: clients_initialitation.py  nl_to_sql.py  nl_to_sql_flow.py
fastapi_template/connectors/: CosClient.py  DbManager.py  ElasticSearch.py  EmbeddingsClient.py  MilvusClient.py  S3Client.py  VerifyDecorator.py  WDClient.py  WatsonxClient.py  WebSocketManager.py
fastapi_template/models/: BaseModel.py  LastFilesModel.py  SampleMilvusSchema.py
k8s/: deployment.yaml  kustomization.yaml  route.yaml  service.yaml
