[project]
name = "backend_database_query"
version = "0.1.0"
description = "FastAPI template for engagement quick start"
authors = [
    {name = "dsanchezseco-ibm",email = "david.sanchez-seco@ibm.com"}
]
readme = "README.md"
requires-python = "<3.12,>=3.10"
dependencies = [
    "fastapi (==0.111.1)",
    "uvicorn (==0.30.1)",
    "python-dotenv (==1.0.1)",
    "waitress (==2.1.2)",
    "requests (==2.31.0)",
    "elasticsearch (==8.13.0)",
    "ibm-watsonx-ai (==1.3.3)",
    "Authlib (==1.3.0)",
    "Werkzeug (==3.0.3)",
    "ibm-cos-sdk (==2.13.4)",
    "boto3 (==1.34.140)",
    "ibm-db (==3.2.5)",
    "ibm-db-sa (==0.4.1)",
    "SQLAlchemy (==2.0.31)",
    "ibm-watson (>=9.0.0,<10.0.0)",
    "ibm-cloud-sdk-core (>=3.22.1,<4.0.0)",
    "opentelemetry-distro (>=0.50b0,<0.51)",
    "instana (>=3.2.1,<4.0.0)",
    "pymilvus[model] (==2.5.4)",
    "scipy (==1.15.2)",
    "langchain-ibm (==0.3.6)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
dev = "backend_database_query:start_dev"
pro = "backend_database_query:start"
